[gd_scene load_steps=2 format=1]

[ext_resource path="res://core/HUD/MFD/MFD.gd" type="Script" id=1]

[node name="MFDPanel" type="PanelContainer"]

visibility/blend_mode = 2
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 248.0
margin/right = 300.0
margin/bottom = 31.0
script/script = ExtResource( 1 )

[node name="box" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 264.0
margin/bottom = 213.0
alignment = 0

[node name="func" type="HBoxContainer" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 260.0
margin/bottom = 180.0
alignment = 0

[node name="ButtonsLeft" type="VButtonArray" parent="box/func"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 36.0
margin/bottom = 180.0
button/count = 4
button/min_button_size = -1.0
button/align = 1
button/0/text = "1>"
button/0/icon = null
button/1/text = "2>"
button/1/icon = null
button/2/text = "3>"
button/2/icon = null
button/3/text = "4>"
button/3/icon = null
button/selected = 0

[node name="Display" type="PanelContainer" parent="box/func"]

rect/min_size = Vector2( 180, 180 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 220.0
margin/bottom = 180.0

[node name="ButtonsRight" type="VButtonArray" parent="box/func"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 0.0
margin/right = 260.0
margin/bottom = 180.0
button/count = 4
button/min_button_size = -1.0
button/align = 1
button/0/text = "<5"
button/0/icon = null
button/1/text = "<6"
button/1/icon = null
button/2/text = "<7"
button/2/icon = null
button/3/text = "<8"
button/3/icon = null
button/selected = 0

[node name="ButtonsBottom" type="HButtonArray" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 184.0
margin/right = 260.0
margin/bottom = 205.0
button/count = 3
button/min_button_size = -1.0
button/align = 3
button/0/text = "Sel"
button/0/icon = null
button/1/text = "Mod"
button/1/icon = null
button/2/text = "POW"
button/2/icon = null
button/selected = 0

[connection signal="button_selected" from="box/func/ButtonsLeft" to="." method="_on_ButtonsLeft_button_selected"]

[connection signal="button_selected" from="box/func/ButtonsRight" to="." method="_on_ButtonsRight_button_selected"]

[connection signal="button_selected" from="box/ButtonsBottom" to="." method="_on_ButtonsBottom_button_selected"]


